[package]
name = "udpsec"
version = "0.1.0"
description = "Secure UDP implementation in Rust"
keywords = ["udp"]
authors = ["Nikita Podvirnyy <suimin.tu.mu.ga.mi@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/krypt0nn/wait_not_await"
edition = "2021"

[dependencies]
rand_core = { version = "0.5.1", features = ["std"] }
x25519-dalek = { version = "1.2.0", features = ["reusable_secrets"] }
